# PEA_Projekt

./: .cproject  .project  Annealing.cpp  Annealing.hpp  App.cpp  App.hpp  BranchAndBound.cpp  BranchAndBound.hpp  BruteForce.cpp  BruteForce.hpp  CMakeLists.txt  Exception.hpp  Genetic.cpp  Genetic.hpp  Graph.cpp  Graph.hpp  README.md  TSP.cpp  TSP.hpp  Test.cpp  Test.hpp  annealingTestRes.txt  dat5.txt  main.cpp
